# tutorial-rust

./: README.md
crates/auth-jwt-server/: Cargo.toml  Makefile  README.md
crates/auth-jwt-server/src/: auth.rs  main.rs  routes.rs
crates/auth-jwt-server/src/auth/: auth.rs  axum_impl.rs  errors.rs  keys.rs  mod.rs  model.rs
crates/smart-pointers/src/: main.rs
