[package]
name = "auth-jwt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.6" , features = ["headers"]}
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
